plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
	accessWidenerPath = file("src/main/resources/kiwiclient.accesswidener")
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		url 'https://jitpack.io'
	}

	maven {
		name = "modrinth"
		url = "https://api.modrinth.com/maven"

		content {
			includeGroup "maven.modrinth"
		}
	}

	mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:20.1.0'

    // To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	Set<String> apiModules = [
			"fabric-api-base",
			"fabric-item-group-api-v1",
			"fabric-resource-loader-v0",
			"fabric-events-interaction-v0",
			"fabric-key-binding-api-v1",
			"fabric-lifecycle-events-v1"
	]
	// Add each module as a dependency
	apiModules.forEach {
		include(modImplementation(fabricApi.module(it, project.fabric_version)))
	}

	//implementation "maven.modrinth:sodium:${project.sodium_version}"
	modCompileOnly "maven.modrinth:sodium:${project.sodium_version}"
	//	include "maven.modrinth:sodium:${project.sodium_version}"

//	implementation "com.github.Vatuu:discord-rpc:1.6.2"
//	include "com.github.Vatuu:discord-rpc:1.6.2"

	implementation "com.github.LlamaLad7.MixinExtras:mixinextras-fabric:0.2.0-beta.8"
	annotationProcessor "com.github.LlamaLad7.MixinExtras:mixinextras-fabric:0.2.0-beta.8"
	include "com.github.LlamaLad7.MixinExtras:mixinextras-fabric:0.2.0-beta.8"

	modImplementation "com.ptsmods:devlogin:3.5"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.21 upwards uses Java 21.
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}